--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
     "express": "~4.12.4",
+    "express-session": "^1.11.3",
     "jade": "~1.9.2",
     "mongoose": "^4.0.6",
     "morgan": "~1.5.3",
+    "passport": "^0.2.2",
+    "passport-facebook": "^2.0.0",
     "serve-favicon": "~2.2.1"
   }
 }
