--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "morgan": "~1.5.3",
     "passport": "^0.2.2",
     "passport-facebook": "^2.0.0",
-    "serve-favicon": "~2.2.1"
+    "serve-favicon": "~2.2.1",
+    "winston": "^1.0.1"
   }
 }
